// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Array [
  <div
    class="container"
  >
    <div
      class="title"
    >
      Title
    </div>
    <input
      class="element"
      placeholder="Title of widget"
      type="text"
      value=""
    />
  </div>,
  <div
    class="container"
  >
    <div
      class="title"
    >
      Temperature
    </div>
    <div
      class="group"
    >
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__metric"
        >
          <input
            checked=""
            class="element"
            id="radio-button__metric"
            type="radio"
            value="metric"
          />
          °C
        </label>
      </div>
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__imperial"
        >
          <input
            class="element"
            id="radio-button__imperial"
            type="radio"
            value="imperial"
          />
          °F
        </label>
      </div>
    </div>
  </div>,
  <div
    class="container"
  >
    <div
      class="title"
    >
      Wind
    </div>
    <div
      class="group"
    >
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__on"
        >
          <input
            checked=""
            class="element"
            id="radio-button__on"
            type="radio"
            value="on"
          />
          On
        </label>
      </div>
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__off"
        >
          <input
            class="element"
            id="radio-button__off"
            type="radio"
            value="off"
          />
          Off
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with a title 1`] = `
Array [
  <div
    class="container"
  >
    <div
      class="title"
    >
      Title
    </div>
    <input
      class="element"
      placeholder="Title of widget"
      type="text"
      value="Title"
    />
  </div>,
  <div
    class="container"
  >
    <div
      class="title"
    >
      Temperature
    </div>
    <div
      class="group"
    >
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__metric"
        >
          <input
            checked=""
            class="element"
            id="radio-button__metric"
            type="radio"
            value="metric"
          />
          °C
        </label>
      </div>
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__imperial"
        >
          <input
            class="element"
            id="radio-button__imperial"
            type="radio"
            value="imperial"
          />
          °F
        </label>
      </div>
    </div>
  </div>,
  <div
    class="container"
  >
    <div
      class="title"
    >
      Wind
    </div>
    <div
      class="group"
    >
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__on"
        >
          <input
            checked=""
            class="element"
            id="radio-button__on"
            type="radio"
            value="on"
          />
          On
        </label>
      </div>
      <div
        class="container"
      >
        <label
          class="label"
          for="radio-button__off"
        >
          <input
            class="element"
            id="radio-button__off"
            type="radio"
            value="off"
          />
          Off
        </label>
      </div>
    </div>
  </div>,
]
`;
